# AGC

./: .gitignore  CMakeLists.txt  Notes.md  readme.md
src/: audioProcessor.cpp  audioProcessor.hpp  main.cpp
